delete and modify are ready